fix overlap of main section with navbar

--- a/app/assets/stylesheets/homepage.css.scss
+++ b/app/assets/stylesheets/homepage.css.scss
@@ -42,6 +42,7 @@ html {
 	background-color: #000;
 	position:fixed;
 	width: 100%;
+	z-index:1;
 }
 
 .nav-main {
